--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -475,13 +475,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "SMIAZEP_9O4s"
    },
+   "source": [
+    "How many input nodes and output nodes are there?\n",
+    "\n",
+    "input nodes:3, output nodes:1\n",
+    "\n",
+    "Pick how many nodes are in the hidden layer. Pick an activation function in the hidden layer. Include bias nodes at the hidden layer and the output layer.\n",
+    "\n",
+    "Three nodes in the hidder layer. Linear activation function.\n",
+    "\n",
+    "What activation function would you pick for the output layer?\n",
+    "\n",
+    "sigmoid function\n",
+    "\n",
+    "What loss function would you pick for fitting this model?\n",
+    "\n",
+    "Mean Squared Error loss\n",
+    "\n",
+    "How many total free parameters are in this network?\n",
+    "\n",
+    "10\n",
+    "\n",
+    "Write an equation for the output of this network as a function of its input.\n",
+    "\n",
+    "g(x) = e^x/(e^x + 1)\n",
+    "\n",
+    "f(x) = wx + b\n",
+    "\n",
+    "y = g(v1h1 + v2h2 + v3h3 + c)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
