--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -464,21 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ L = -ylog(y)-(1-y)log(1-y)$$\n",
-    "\n",
-    "$$ \\frac{dL}{dv_1} = \\frac{dL}{d\\hat{y}}h_1 = (\\frac{y_i}{\\hat{y_i}} - \\frac{1- y_i}{1 - \\hat{y_i}}) ReLu(w_{11} x_1 + w_{21}  x_2 + b_1)$$$$ \\frac{dL}{dv_2} = \\frac{dL}{d\\hat{y}}h_2 = (\\frac{y_i}{\\hat{y_i}} - \\frac{1- y_i}{1 - \\hat{y_i}}) ReLu(w_{12}  x_1 + w_{22}  x_2 + b_2)$$$$ \\frac{dL}{dv_3} = \\frac{dL}{d\\hat{y}}h_3 = (\\frac{y_i}{\\hat{y_i}} - \\frac{1- y_i}{1 - \\hat{y_i}}) ReLu(w_{13}  x_1 + w_{23} x_2 + b_3)$$$$ \\frac{dL}{dv_4} = \\frac{dL}{d\\hat{y}}h_4 = (\\frac{y_i}{\\hat{y_i}} - \\frac{1- y_i}{1 - \\hat{y_i}}) ReLu(w_{14}  x_1 + w_{24}  x_2 + b_4)$$\n",
-    "\n",
-    "\n",
-    "$$ \\frac{dL}{dc} = \\frac{dL}{d\\hat{y}} \\frac{d\\hat{y}}{dc} = (\\frac{y_i}{\\hat{y_i}} - \\frac{1- y_i}{1 - \\hat{y_i}}) \\frac{d\\hat{y}}{dc} = (\\frac{y_i}{\\hat{y_i}} - \\frac{1- y_i}{1 - \\hat{y_i}}) \\frac{d(Sigmoid(v_1h_1+v_2h_2+v_3h_3+v_4h_4+c))}{dc} $$\n",
-    "\n",
-    "$$ \\frac{dL}{dw_{1i}} = \\frac{dL}{d\\hat{y}} \\frac{d\\hat{y}}{dh_i} \\frac{dh_i}{d(w_{1i}x_1 + w_{2i}x_2 + b_i)} \\frac{d(w_{1i}x_1 + w_{2i}x_2 + b_i)} {dw_{1i}}$$\n",
-    "\n",
-    "$$ \\frac{dL}{dw_{2i}} = \\frac{dL}{d\\hat{y}} \\frac{d\\hat{y}}{dh_i} \\frac{dh_i}{d(w_{1i}x_1 + w_{2i}x_2 + b_i)} \\frac{d(w_{1i}x_1 + w_{2i}x_2 + b_i)} {dw_{2i}}$$\n",
-    "$$ h_i = Relu(w_{1i}x_1 + w_{2i}x_2 + b_i)$$\n",
-    "\n",
-    "\n",
-    "$$ \\frac{dL}{db_i} = \\frac{dL}{d\\hat{y}} \\frac{d\\hat{y}}{dh_i} \\frac{dh_i}{d(w_{1i}x_1 + w_{2i}x_2 + b_i)} \\frac{d(w_{1i}x_1 + w_{2i}x_2 + b_i)} {db_i}$$\n",
-    "$$ h_i = Relu(w_{1i}x_1 + w_{2i}x_2 + b_i)$$"
+    "<img src=\"./Capture1.PNG\">"
    ]
   },
   {
